--- a/server/pom.xml
+++ b/server/pom.xml
@@ -52,6 +52,11 @@
       <version>2.0.2</version>
     </dependency>
     <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>23.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
       <version>2.4.5</version>
