--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,6 +61,11 @@
       <artifactId>modelmapper</artifactId>
       <version>2.4.5</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
 
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
