--- a/server/pom.xml
+++ b/server/pom.xml
@@ -84,6 +84,18 @@
       <version>0.11.5</version>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.11</version>
+    </dependency>
+
   </dependencies>
 
 
