--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       password: admin
       username: admin
       auto-index-creation: true
+  main:
+    allow-circular-references: true
 
 authorization:
   enabled: true
