--- a/server/src/test/resources/application.yml
+++ b/server/src/test/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   data:
     mongodb:
       authentication-database: admin
-      database: petterDB
+      database: petterDB-test
       host: localhost
       port: 27017
       password: admin
