#25: Registration confirmation via email

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
 FROM eclipse-temurin:17-jre-focal
 COPY target/Petter-0.1.jar Petter-0.1.jar
-ENTRYPOINT ["java","-jar","/TestTask.jar"]
+ENTRYPOINT ["java","-jar","/Petter-0.1.jar"]
