--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ru.gortea.petter">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".app.PetterApp"
         android:allowBackup="true"
@@ -16,6 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:theme="@style/Theme.Petter">
             <intent-filter>
