#26: Add api logging and migrate to http

--- a/android/modules/network/build.gradle
+++ b/android/modules/network/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation Libs.serialization
     implementation Libs.retrofitSerializationConverter
+    implementation Libs.okHttpLoggingInterceptor
 
     api Libs.retrofit
 }
