#26: Add avatar and single photo picker logic

--- a/android/modules/ui-kit/build.gradle
+++ b/android/modules/ui-kit/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     api AndroidX.composeFoundation
     api AndroidX.composeMaterial
     api AndroidX.composePreview
+    api AndroidX.composeActivity
+    api AndroidX.activityKtx
 
     debugApi AndroidX.composeUiTooling
 
