--- a/android/modules/features/auth/build.gradle
+++ b/android/modules/features/auth/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     implementation project(":modules:arch-android")
     implementation project(":modules:features:auth-data")
     implementation project(":modules:ui-kit")
+
+    implementation Libs.coil
 }
