--- a/android/modules/features/auth/build.gradle
+++ b/android/modules/features/auth/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 dependencies {
     implementation project(":modules:arch-android")
     implementation project(":modules:features:auth-data")
+    implementation project(":modules:navigation")
     implementation project(":modules:ui-kit")
 
     implementation Libs.coil
