#34: Add data layer of authorization by refresh-token

--- a/android/modules/features/auth-data/build.gradle
+++ b/android/modules/features/auth-data/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation Libs.coroutines
     implementation Libs.retrofit
 
+    implementation project(":modules:token-storage")
     api project(":modules:data")
     api project(":modules:features:profile-data")
 }
