--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,6 +12,7 @@ android {
 }
 
 dependencies {
+    implementation Libs.coil
     implementation Libs.dagger2
     kapt Libs.dagger2Compiler
 
@@ -31,6 +32,8 @@ dependencies {
     implementation project(":modules:features:auth")
     implementation project(":modules:features:auth-data")
     implementation project(":modules:features:auth-controller")
+
+    implementation project(":modules:features:profile-edit")
 
     implementation project(":modules:arch-android")
     implementation project(":modules:navigation")
