--- a/android/modules/arch-android/build.gradle
+++ b/android/modules/arch-android/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation AndroidX.composeUi
     implementation AndroidX.lifecycleViewModelKtx
 
+    implementation project(":modules:ui-kit")
+
     api AndroidX.composeViewModel
     api project(":modules:arch")
 }
