--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     implementation project(":modules:features:auth-data")
     implementation project(":modules:features:auth-controller")
 
+    implementation project(":modules:features:profile")
     implementation project(":modules:features:profile-edit")
+    implementation project(":modules:features:profile-data")
 
     implementation project(":modules:arch-android")
     implementation project(":modules:navigation")
