--- a/android/modules/features/content-root/build.gradle
+++ b/android/modules/features/content-root/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation AndroidX.composeUi
     implementation AndroidX.composeMaterial
 
+    implementation project(":modules:features:profile")
+
     implementation project(":modules:navigation")
     implementation project(":modules:ui-kit")
 }
