--- a/android/modules/network/build.gradle
+++ b/android/modules/network/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     api Libs.retrofit
 
     implementation project(":modules:token-storage")
+    implementation project(":modules:features:auth-controller")
 }
