#36: add pet edit screen

--- a/android/modules/ui-kit/build.gradle
+++ b/android/modules/ui-kit/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     api AndroidX.composeActivity
     api AndroidX.activityKtx
 
+    implementation AndroidX.material
+
     debugApi AndroidX.composeUiTooling
 
     api project(":modules:theme")
