--- a/android/modules/features/profile/build.gradle
+++ b/android/modules/features/profile/build.gradle
@@ -7,6 +7,9 @@ plugins {
 dependencies {
     implementation project(":modules:features:profile-data")
     implementation project(":modules:features:profile-edit")
+
+    implementation project(":modules:features:pet")
+
     implementation project(":modules:features:auth-controller")
 
     implementation project(":modules:arch-android")
