--- a/android/modules/arch-android/build.gradle
+++ b/android/modules/arch-android/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation AndroidX.composeUi
     implementation AndroidX.lifecycleViewModelKtx
+    implementation Libs.appyx
 
     implementation project(":modules:ui-kit")
 
