#65: add pull to refresh to all lists

--- a/android/modules/features/content-root/build.gradle
+++ b/android/modules/features/content-root/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation AndroidX.composeUi
     implementation AndroidX.composeMaterial
 
+    implementation project(":modules:features:home")
     implementation project(":modules:features:profile")
 
     implementation project(":modules:navigation")
