--- a/server/pom.xml
+++ b/server/pom.xml
@@ -98,6 +98,11 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>9.1.1</version>
+    </dependency>
 
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
