--- a/server/pom.xml
+++ b/server/pom.xml
@@ -121,6 +121,11 @@
       <version>0.11.5</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>4.2.1</version>
+    </dependency>
 
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
