--- a/server/pom.xml
+++ b/server/pom.xml
@@ -126,6 +126,11 @@
       <artifactId>java-jwt</artifactId>
       <version>4.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <version>1.70</version>
+    </dependency>
 
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
