#71: delete actions from mvi

--- a/android/modules/features/home/build.gradle
+++ b/android/modules/features/home/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 dependencies {
+    implementation project(":modules:features:pet")
     implementation project(":modules:features:pet-list")
 
     implementation project(":modules:arch-android")
