--- a/android/modules/features/chat-data-messages/build.gradle
+++ b/android/modules/features/chat-data-messages/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
+    id 'kotlinx-serialization'
 }
 
 dependencies {
+    implementation Libs.serialization
     implementation Libs.coroutines
 }
