#119: open app with old refresh token if auth is failed by request error

--- a/android/modules/features/auth-data/build.gradle
+++ b/android/modules/features/auth-data/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation Libs.retrofit
 
     implementation project(":modules:token-storage")
+    implementation project(":modules:network")
     api project(":modules:data")
     api project(":modules:features:auth-controller")
 }
