--- a/android/modules/features/auth/build.gradle
+++ b/android/modules/features/auth/build.gradle
@@ -7,6 +7,7 @@ plugins {
 dependencies {
     implementation project(":modules:features:auth-data")
 
+    implementation project(":modules:network-errors")
     implementation project(":modules:token-storage")
     implementation project(":modules:arch-android")
     implementation project(":modules:navigation")
