--- a/android/modules/network/build.gradle
+++ b/android/modules/network/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 
     implementation project(":modules:token-storage")
     implementation project(":modules:features:auth-controller")
+    api project(":modules:network-errors")
 }
