#126: add tests to chat-list

--- a/android/modules/features/chat-list/build.gradle
+++ b/android/modules/features/chat-list/build.gradle
@@ -13,4 +13,10 @@ dependencies {
 
     implementation Libs.coil
     implementation Libs.coroutines
+
+    testImplementation Libs.koTestJUnit
+    testImplementation Libs.koTestAssertions
+    testImplementation Libs.koTestProperty
+
+    testImplementation Libs.turbine
 }
