--- a/android/modules/network/build.gradle
+++ b/android/modules/network/build.gradle
@@ -12,5 +12,6 @@ dependencies {
 
     implementation project(":modules:token-storage")
     implementation project(":modules:features:auth-controller")
+    implementation project(":modules:network-url")
     api project(":modules:network-errors")
 }
