--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation project(":modules:theme")
 
     debugImplementation AndroidX.composeUiTooling
+    debugImplementation Libs.leakCanary
 }
